--- a/.github/workflows/newrun.yml
+++ b/.github/workflows/newrun.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           java-version: 17
           distribution: adopt
-          cache: gradle
+          # cache: gradle
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3.2.2
