--- a/.github/workflows/newrun.yml
+++ b/.github/workflows/newrun.yml
@@ -34,15 +34,15 @@ jobs:
           rm $GITHUB_WORKSPACE/builds/*.cs3 || true
           rm $GITHUB_WORKSPACE/builds/*.jar || true
 
-      - name: Set up JDK 21
+      - name: Setup JDK 17
         uses: actions/setup-java@v5
         with:
-          java-version: 21
+          java-version: 17
           distribution: adopt
-          cache: gradle
+          # cache: gradle
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3.2.2
 
       - name: Access Secrets
         env:
